[project]
name = "recon-trace"
version = "0.1.0"
description = "Lightweight circuit tracing toolkit for transformers"
authors = [{name="Viraj Sharma", email="viraj@modelrecon.com"}]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0"
]

[tool.setuptools]
packages = { find = { where = ["."] } }

[tool.black]
line-length = 88
